# 3d_viewer_2

./: .gitignore
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/docs/: Doxyfile  MainPage.md
src/docs/doxygen/html/: 3_d_viewer__2__autogen_2moc__predefs_8h_source.html  affinity_8h.html  affinity_8h_source.html  annotated.html  class_q_gif_image-members.html  class_q_gif_image.html  classes.html  classs21_1_1_all_transformation_builder-members.html  classs21_1_1_all_transformation_builder.html  classs21_1_1_controller-members.html  classs21_1_1_controller.html  classs21_1_1_director-members.html  classs21_1_1_director.html  classs21_1_1_model-members.html  classs21_1_1_model.html  classs21_1_1_object_data-members.html  classs21_1_1_object_data.html  classs21_1_1_rotation-members.html  classs21_1_1_rotation.html  classs21_1_1_scaling-members.html  classs21_1_1_scaling.html  classs21_1_1_transformator-members.html  classs21_1_1_transformator.html  classs21_1_1_transformator_builder-members.html  classs21_1_1_transformator_builder.html  classs21_1_1_translation-members.html  classs21_1_1_translation.html  controller_8h_source.html  dir_0225b5136e2ce25372f3f607db1bc6e6.html  dir_3f14f6767c31cb4a1d22c13c18cc6fc3.html  dir_4021bffeeef7d28d5a9f0764819a29ba.html  dir_419ce39a6850b18d12dbe0c046b457f2.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5676f076421282354ef1f814eb09bba5.html  dir_5689a8e2861f4cd16aff1472629786de.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_5d08acc5df463e13b82bc656760bf191.html  dir_63772b626f2709090f0bdca0f40827b4.html  (+40 more)
src/docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+5 more)
src/docs/meta/: extra.css
src/model/: affinity.cc  affinity.h  model.cc  model.h  object.cc  object.h  parser.cc  parser.h
src/tests/: test_affinity.cc  test_controller.cc  test_model.cc  test_parser.cc
src/view/: glview.cc  glview.h  mainwindow.ui  myopenglwidget.cc  myopenglwidget.h  view.cc  view.h
src/view/QtGifImage/: CMakeLists.txt
